--- a/views/exam.html
+++ b/views/exam.html
@@ -4,13 +4,14 @@
 		<meta charset="utf-8">
 		<title>Online Exam Application</title>
 		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
 	</head>
 	<body>
 		<div id="vue-app">
-			<h1>Question {{counter+1}}</h1>
-			<p>{{questions[counter].text}}</p>
-					<p v-for="option in questions[counter].options">
-						<input type="radio" name="optionSelected" value="option.option">{{option.option}}
+			<h1>Question 1</h1>
+			<p>{{Question[0].text}}</p>
+					<p v-for="option in Question.options">
+						<input type="radio" name="optionSelected" value="">{{option}}
 					</p>
 			<button v-on:click="counter -= 1">Prev</button>
 			<button v-on:click="counter += 1">Next</button>
@@ -18,39 +19,22 @@
 		<script>
 		var app = new Vue({
 			el:'#vue-app',
-			data: {
-				message: 'Hello username!',
-				questions: [
-					{ 	text: 'What are the number of hours in a day?',
-						options: [
-							{ option: 24 },
-							{ option: 15 },
-							{ option: 12 },
-							{ option: 36 }
-						],
-						answer: 24
-						},
-					{ 	text: 'What are the number of days in a leap year?',
-						options: [
-							{ option: 250 },
-							{ option: 364 },
-							{ option: 365 },
-							{ option: 366 }
-						],
-						answer: 366
-						},
-					{ 	text: 'How many seconds make a minute?',
-						options: [
-							{ option: 24 },
-							{ option: 60 },
-							{ option: 30 },
-							{ option: 180 }
-						],
-						answer: 60
-						}
-				],
-				counter: 0
+			data: function() {
+				return {
+					Question: []
+				};
+			},
+			mounted(){
+				axios.get('http://localhost:3000/question')
+				.then((response) => {
+					console.log(response.data);
+					this.Question = response.data;
+				})
+				.catch((error) => {
+					console.log(error);
+				})
 			}
+			//counter : 0
 		})
 		</script>
 	</body>
