--- a/views/login.html
+++ b/views/login.html
@@ -1,10 +1,72 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Online exam</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Online exam</title>
+  <style>
+    body {
+      background-color: #eee;
+    }
+
+    .container {
+      margin: 20px auto;
+      max-width: 1120px;
+    }
+
+    h2 {
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      font-size: 25px;
+      /* text-align: center; */
+    }
+
+    label {
+      display: block;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    input {
+      border: none;
+      padding: 15px 20px;
+      width: 70%;
+      margin: 20px auto;
+      display: inline-block;
+    }
+
+    @media only screen and (max-width: 600px) {
+      input {
+        width: 100%;
+      }
+    }
+
+    button {
+      border: none;
+      padding: 15px 50px;
+      border-radius: 100px;
+      color: #fff;
+      background-color: #333;
+      font-size: 16px;
+      text-transform: uppercase;
+      font-family: serif;
+      transition: all .4s;
+    }
+
+    button:hover {
+      background-color: #fff;
+      color: #333;
+      border: 1px solid #333;
+      transform: translateY(-5px);
+    }
+
+    button:active {
+      transform: translateY(-2px);
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
     <h2 class="page-header">Account Login</h2>
     <form method="post" action="/users/login">
       <div class="form-group">
@@ -17,5 +79,7 @@
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
-  </body>
+  </div>
+</body>
+
 </html>
